unpackaged/main/default/objects/WorkOrderLineItem/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Not Used</description>
    <label>Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>