unpackaged/main/default/objects/WorkOrderLineItem/fields/Estimation_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Estimation_of_Work__c</fullName>
    <description>To be entered by the PM / Estimator to generate a rough estimation of total works</description>
    <inlineHelpText>To be entered by the PM / Estimator to generate a rough estimation of total works</inlineHelpText>
    <label>Estimation of Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>