unpackaged/main/default/objects/WorkOrderLineItem/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <description>This is the index used by 123FB to order the line items on a client estimate</description>
    <inlineHelpText>This is the index used by 123FB to order the line items on a client estimate</inlineHelpText>
    <label>Line Item Number</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>