unpackaged/main/default/objects/WorkOrderLineItem/fields/Needed__c.field-meta.xml
<CustomField>
    <fullName>Needed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>To submit for quote approval</inlineHelpText>
    <label>Needed</label>
    <type>Checkbox</type>
</CustomField>