unpackaged/main/default/objects/WorkOrderLineItem/fields/Parent_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work_Type__c</fullName>
    <formula>WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Work Type</label>
    <type>Text</type>
</CustomField>