unpackaged/main/default/objects/WorkOrderLineItem/fields/ParentWorkOrder__c.field-meta.xml
<CustomField>
    <fullName>ParentWorkOrder__c</fullName>
    <description>Required for the Quote Creation flow</description>
    <formula>CASESAFEID(WorkOrder.ParentWorkOrderId)</formula>
    <label>ParentWorkOrder</label>
    <type>Text</type>
</CustomField>