unpackaged/main/default/objects/WorkOrderLineItem/fields/Scheduled_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Text__c</fullName>
    <label>Scheduled Date Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>