unpackaged/main/default/objects/WorkOrderLineItem/fields/Scheduled_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time_Text__c</fullName>
    <label>Scheduled Time Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>