unpackaged/main/default/objects/WorkOrderLineItem/fields/Summarised_WOLI_Info_for_Flow_display__c.field-meta.xml
<CustomField>
    <fullName>Summarised_WOLI_Info_for_Flow_display__c</fullName>
    <formula>RIGHT(LineItemNumber,2) &amp; &quot;: &quot; &amp; Work_Type_Line_Item_Name__c &amp; &quot;, &quot; &amp; &quot;Status: &quot; &amp; TEXT(Status) &amp; IF(TEXT(Scheduled_Date_Time__c)=&#39;Z&#39;,&quot;&quot;,
LPAD(TEXT(DAY(DATEVALUE(Scheduled_Date_Time__c))),2,&#39;0&#39;) &amp; &quot;/&quot; &amp; LPAD(TEXT(MONTH(DATEVALUE(Scheduled_Date_Time__c))),2,&#39;0&#39;) &amp; &quot;/&quot; &amp; LPAD(TEXT(YEAR(DATEVALUE(Scheduled_Date_Time__c))),2,&#39;0&#39;))</formula>
    <label>Summarised WOLI Info for Flow display</label>
    <type>Text</type>
</CustomField>