unpackaged/main/default/objects/WorkOrderLineItem/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>What the engineer needs to do - will be stamped with Work Type Line Item.Name on Line Item creation, but can then be manually edited afterwards.</description>
    <label>Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>