unpackaged/main/default/objects/WorkOrderLineItem/fields/Time_Stamp_Completed__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp_Completed__c</fullName>
    <description>A Time Stamp when the Status is changed to &#39;Completed&#39; to calculate total time of work</description>
    <label>Time Stamp Completed</label>
    <type>Time</type>
</CustomField>