unpackaged/main/default/objects/WorkOrderLineItem/fields/Time_Stamp_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp_In_Progress__c</fullName>
    <description>Time stamp when the Status is set to &#39;In Progress&#39;</description>
    <label>Time Stamp In Progress</label>
    <type>Time</type>
</CustomField>