unpackaged/main/default/objects/WorkOrderLineItem/fields/Total_Costs_for_PO_Prod_Req__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs_for_PO_Prod_Req__c</fullName>
    <label>Total Costs for PO Prod Req</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>