unpackaged/main/default/objects/WorkOrderLineItem/fields/Total_Costs_for_Van_Stock_Prod_Req__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs_for_Van_Stock_Prod_Req__c</fullName>
    <label>Total Costs for Van Stock Prod Req</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>