unpackaged/main/default/objects/WorkOrderLineItem/fields/Work_Type_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type Line Item</label>
    <referenceTo>Work_Type_Line_Item__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>