unpackaged/main/default/objects/WorkOrderLineItem/fields/Work_Type_Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Line_Item_Name__c</fullName>
    <description>Name of the Work Type Line Item</description>
    <formula>Work_Type_Line_Item__r.Name__c</formula>
    <inlineHelpText>Name of the Work Type Line Item</inlineHelpText>
    <label>Work Type Line Item Name</label>
    <type>Text</type>
</CustomField>