unpackaged/main/default/objects/WorkOrderLineItem/fields/Work_Type_Renamed__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Renamed__c</fullName>
    <description>Sub-Task</description>
    <inlineHelpText>Sub-Task</inlineHelpText>
    <label>Work Type - Renamed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>