unpackaged/main/default/objects/WorkOrderLineItem/fields/Work_Type_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_SubCategory__c</fullName>
    <formula>WorkOrder.WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type - SubCategory</label>
    <type>Text</type>
</CustomField>