unpackaged/main/default/objects/WorkOrderLineItem/validationRules/Duration_Type_must_be_in_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Type_must_be_in_Hours</fullName>
    <active>true</active>
    <description>Duration Type must be in Hours</description>
    <errorConditionFormula>ISPICKVAL(DurationType, &quot;Minutes&quot;)</errorConditionFormula>
    <errorDisplayField>DurationType</errorDisplayField>
    <errorMessage>Duration Type must be in Hours</errorMessage>
</ValidationRule>