unpackaged/main/default/objects/WorkOrderLineItem/validationRules/Validate_Work_Type_Parent_Child.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Work_Type_Parent_Child</fullName>
    <active>false</active>
    <description>Disabled as part of UAT-162</description>
    <errorConditionFormula>WorkOrder.WorkType.Id &lt;&gt;   WorkType.00N0N00000FEy8u.Id</errorConditionFormula>
    <errorDisplayField>WorkTypeId</errorDisplayField>
    <errorMessage>Please, select a Sub-Task related to the same Sub-Category (Work Type)</errorMessage>
</ValidationRule>